@@ -5,6 +5,9 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Temp key "for export" tests were wrong in s3_srvr.c.
+     [Anonymous <nobody@replay.com>]
+
   *) Add prototype for temp key callback functions
      SSL_CTX_set_tmp_{rsa,dh}_callback().
      [Ben Laurie]
